--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:GPe3kL4t0otvojSo75OP5nxkQq3c0yf7XeJ+BmnZFGQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=120.78.197.19
 DB_PORT=3306
-DB_DATABASE=weika
-DB_USERNAME=weika
-DB_PASSWORD=weika
+DB_DATABASE=zulin
+DB_USERNAME=zulin
+DB_PASSWORD="Zulin#997"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,6 +29,8 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=null
+MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
