--- a/composer.json
+++ b/composer.json
@@ -8,18 +8,23 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2",
+        "aliyuncs/oss-sdk-php": "^2.3",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/framework": "^6.2",
+        "laravel/tinker": "^2.0",
+        "springlee/zljoa": "^1.0",
+        "tucker-eric/eloquentfilter": "^2.3",
+        "ext-json": "*"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
+        "barryvdh/laravel-ide-helper": "^2.6",
+        "doctrine/dbal": " ~2.3",
+        "facade/ignition": "^1.4",
+        "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^8.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -38,6 +43,9 @@
         "classmap": [
             "database/seeds",
             "database/factories"
+        ],
+        "files": [
+            "app/Helpers/functions.php"
         ]
     },
     "autoload-dev": {
@@ -58,5 +66,11 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
+    },
+    "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://mirrors.aliyun.com/composer/"
+        }
     }
 }
